# real-estate-test

./: README.md  app.py  dockerfile  main.py  pyproject.toml  streamlit_app.py
