[project]
name = "real-estate-assistant-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.1.4",
    "fastapi>=0.128.5",
    "langchain==0.3.27",
    "langchain-community==0.3.31",
    "langchain-core==0.3.79",
    "langchain-openai==0.3.35",
    "pyairtable>=3.3.0",
    "pydantic>=2.12.5",
    "pymongo[srv]>=4.16.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
]
